Tried fixing line 24 not showing up in source file

--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -21,5 +21,6 @@ h3 {
 .principles img {
     margin-top: 5px;
     border: 0.5px solid black;
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
